...
      context: context,
      builder: (_) => AlertDialog(
        content: Text(message, key: messageKey),
        actions: [
          TextButton(
            onPressed: () => Navigator.of(context).pop(),
            child: const Text('OK'),
          ),
        ],
      ),
    );
  }

...
